# fetmodel

./: .gitignore  ChangeLog  Ids00_cMOSFET.m  Ids_cMOSFET.m  Ids_cMOSFET_main.m  Makefile.am  Q_approx.m  README  README.md  TOOD  ccm.c  ccm.h  cfet_libctl.c  configure.ac  fetmodel.scm.in  iniguez.ctl  iniguez_test1.ctl  q_approx0.m  qroot.m
doc/: Rgraph.eps  ballistic.tex  cMOSFET.tex  cylindricalMESFET.tex  poisson.nb  poisson2.nb
igor/: fetmodel.pxp
libctl/: Makefile.am  ballisticFET.scm.in  ballisticFET1d_libctl.c  cfet_libctl.c  cfet_libctl.h  fetmodel.scm.in
libctl/examples/: GaNFET.ctl  InAsFET.ctl  ballistic1d.ctl  ballistic1d_test1.ctl  density1d_test1.ctl  findVoff_cMOSFET.ctl  iniguez.ctl  iniguez_test1.ctl  sizedep.ctl  sizedep2.ctl  test1.ctl  test2.ctl
octave/: Ids0_cMOSFET.m  Ids_cMOSFET_main.m  qfunc_cMOSFET.m  qfunction.m
python/: #cmosfet.py#  Makefile.am  Makefile.setup  ballistic.i  ballistic.py  ballistic_wrap.c  cfet.c  cfet.h  cfet.i  cfet.py  cfet_wrap.c  cfet_wrap.cpp  define_params.py  example.py  example2.ipynb  fetmodel.c  fetmodel.h  fetmodel.i  kpwurtizte.py  params.c  params.h  planarMOSFET.py  pycfet.c  pycfet.h  pycfet.i  pyfet.c  pyfet.h  pyfet.i  pyfet.py  pyfet_wrap.c  readme  setup.py  test1.py  test2.py  test3.py  wrapper.py  wrapper_ballistic.py
python/examples/: ballistic1d.py  ballistic1d_parabollic_test1.py  ballistic1d_test0.py  ballistic1d_test1.py  ballistic1d_test2.py  ballistic2d.py  ballistic2d_QW_test1.py  ballistic2d_test1.py  ballistic2d_test2.py  ballistic_lindSSC1.py  ballistic_lindSSC2.py  cMOSFET.py  cMOSFET2.py  circ1d.py  density1d.py  density1d_test1.py  density2d_QW_test1.py  density2d_test1.py  ex_planarMOSFET.py  example2.ipynb  inversion1D_test1.py  lindSSC_Fig5.py  lindSSC_Fig6.py
python/inversion1d/: inversion1d.py
python/isubth_nwfet/: isubs_dgfet.py  isubth_nwfet.py
src/: Makefile.am  PhysicalConstants.h  ballistic.c  ballistic.h  ballistic.lo  ballistic_common.h  ballistic_libctl.c  capacitor.c  capacitor.h  capacitor.lo  ccm.c  ccm.h  ccm.lo  ccm0.c  ccm0.h  cfet.c  density1d.c  density1d.h  density1d.lo  density2d.c  density2d.h  density2d.lo  fd.c  fd.h  libfetmodel.la  libfetmodels.la  mos1d.c  mos1d.h
test/: Makefile.am  fdtest  fdtest.c  qw2d_test.c
